--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         this is on another brance i not hope to sit it
         on onther brance
     </div>
+
+    <script>
+        console.log("sanad hamad trying ")
+    </script>
 </body>
 
 </html>
